--- a/src/components/page-home/section-divider/section-divider.module.css
+++ b/src/components/page-home/section-divider/section-divider.module.css
@@ -1,6 +1,6 @@
 /* Divider Section */
 .dividerSection {
-  padding: 60px 0;
+  padding: 0;
   background: #fff;
   position: relative;
 }
